<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    tools:context="com.alonsodiez.mascotaspracticasemana5.ActivityContact"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <include
        layout="@layout/actionbar"
        android:id="@+id/miActionBar"
        ></include>

    <LinearLayout
        android:layout_marginTop="@dimen/margenesp"
        android:layout_marginLeft="@dimen/margenesp"
        android:layout_marginRight="@dimen/margenesp"
        android:id="@+id/area_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/miActionBar">
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:layout_row="2"
            android:src="@drawable/user" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/campo_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/pnombre"
                android:inputType="text"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_marginLeft="@dimen/margenesp"
        android:layout_marginRight="@dimen/margenesp"
        android:id="@+id/area_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/area_nombre">
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:layout_row="2"
            android:src="@drawable/message" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/campo_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/pemail"
                android:inputType="textEmailAddress"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="@dimen/margenesp"
        android:layout_marginRight="@dimen/margenesp"
        android:id="@+id/area_asunto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/area_email">
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_asunto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:layout_row="2"
            android:src="@drawable/contactcard" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_asunto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/campo_asunto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/pasunto"
                android:inputType="text"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="@dimen/margenesp"
        android:layout_marginRight="@dimen/margenesp"
        android:id="@+id/area_mensaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/area_asunto"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_mensaje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_email"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:layout_row="2"
            android:src="@drawable/contactcard" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_mensaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/campo_mensaje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/pmensaje"
                android:inputType="textMultiLine"
                android:singleLine="false" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnMiBoton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/area_detalle"
        android:text="@string/enviar_comentario"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="@dimen/margenesp"
        android:layout_marginRight="@dimen/margenesp"
        android:onClick="enviarEmail"
        android:theme="@style/MiBotonRaised"
        />
</LinearLayout>
